--- a/reveal/index.html
+++ b/reveal/index.html
@@ -110,6 +110,7 @@ Created by [KMOLab](http://lab.kmol.info/)
     <script type="text/template">
 <!-- 請注意, @others 不可以內縮 -->
 由開學第一周到學期末，過程中學習了架設/編輯網站與運用dartpad程式進行編寫等技巧，也運用拍攝影片紀錄並且附上字幕，有助於對程式更加了解。
+原本對於網路的過度依賴，卻對網路的了解甚少，雖然網路方便但背後卻藏滿複雜的程式碼，對於網路我或許還嫌不足，但我確實因為計算機程式這門課增進了許多。
     </script>
 </section>
 </div>
