--- a/reveal/index.html
+++ b/reveal/index.html
@@ -44,10 +44,13 @@
 ### 我誰 ( !
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+Created by [40823210](https://40823210.github.io/cp2019/content/index.html)
 </small>
 
-[CMSimfly 網誌](./../blog/index.html)
+[網誌](https://40823210.github.io/cp2019/blog/index.html)
+[網站](https://40823210.github.io/cp2019/content/index.html)
+[倉儲](https://github.com/40823210/cp2019/)
+
 
 
     </script>
