--- a/reveal/index.html
+++ b/reveal/index.html
@@ -41,14 +41,19 @@
     <script type="text/template">
 ## 40823210個人網站
 
-### 我誰 ( !
+<small>
+## 我誰 ( !
 
 <small>
 Created by [40823210](https://40823210.github.io/cp2019/content/index.html)
 </small>
 
 [網誌](https://40823210.github.io/cp2019/blog/index.html)
+
+
 [網站](https://40823210.github.io/cp2019/content/index.html)
+
+
 [倉儲](https://github.com/40823210/cp2019/)
 
 
